# SYMAO

./: AstroBigneDemos.ipynb  PropagationPaper1.ipynb  README.md  SymTurbolence.ipynb  Zernike.ipynb  propagation.py  pyproject.toml  setup.py  turbolence.py  zernike.py
notebooks/: AstroBigneDemos.ipynb  SymTurbolence.ipynb  Zernike.ipynb
symao/: __init__.py  propagation.py  turbolence.py  zernike.py
