[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "symao"
authors = [
    {name = "Fabio Rossi", email = "fabio.rossi@inaf.it"},
]
description = "A collection of Sympy expressions used in Adaptive Optics"
readme = "README.md"
urls = {repository = "https://github.com/FabioRossiArcetri/SYMAO"}
requires-python = ">=3.7"
license = {text = "MIT License"}
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "seeing",
]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
write_to = "symao/_version.py"
